# stepik_57680_C_for_beginners

./: .gitignore  CMakeLists.txt  main.c
Chapter_03/: chapter_03.h  chapter_3.1.c  chapter_3.1.h  chapter_3.2.c  chapter_3.3.c  chapter_3.4.c  chapter_3.5.c
Chapter_04/: chapter_04.h  chapter_4.1.c  chapter_4.10.c  chapter_4.3.c  chapter_4.4.c  chapter_4.8.c
