cmake_minimum_required(VERSION 3.29)
project(stepik_57680_C_for_beginners C)

set(CMAKE_C_STANDARD 11)

add_executable(stepik_57680_C_for_beginners main.c
        Chapter_03/chapter_03.h
        Chapter_03/chapter_3.1.c
        Chapter_03/chapter_3.2.c
        Chapter_03/chapter_3.3.c
        Chapter_03/chapter_3.4.c
        Chapter_03/chapter_3.5.c
        Chapter_04/chapter_04.h
        Chapter_04/chapter_4.3.c
        Chapter_04/chapter_4.4.c
        Chapter_04/chapter_4.8.c
        Chapter_04/chapter_4.10.c)
